# LearningC

./: CMakeLists.txt  Neuralnet  Neuralnet.cpp  Neuralnet.h  README.md
Andy/: Name.cs  klasser.cs
CodeWars/: CountSmileys  CountSmileys.cpp  DigPow  DigPow.cpp  hexToDec  hexToDec.cpp
Snake/: Snake.cpp  snake_map.h
converter/: convert.h  main  main.c
